[package]
name = "updateagent"
version = "0.1.0"
authors = ["The Mozilla Project Developers"]
license = "MPL-2.0"
autobins = false
edition = "2018"

[target."cfg(windows)".dependencies]
chrono = "0.4.10"
comedy = "0.1.0"
failure = "0.1.6"
log = "0.4.8"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.7"
features = ["minwindef", "ntdef", "oaidl", "oleauto", "taskschd", "winbase", "winerror", "winnt", "wtypes"]

[[bin]]
name = "updateagent"
path = "src/main.rs"
