[package]
name = "bits_client"
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MPL-2.0"

[dependencies]
bits = { path = "./bits" }
comedy = { path = "./comedy" }
failure = "0.1.3"
failure_derive = "0.1.3"
guid_win = { path = "./guid_win" }

[dev-dependencies]
#ctrlc = "3.1.1"
lazy_static = "1.0.1"
rand = "0.4.3"
tempdir = "0.3.5"
