[package]
name = "bits_client"
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MPL-2.0"

[dependencies]
bits = { path = "./bits" }
comedy = "0.1.0-alpha3"
guid_win = "0.1.0-alpha3"

[dependencies.failure]
version = "0.1.3"
features = ["derive"]
default_features = false

[dependencies.failure_derive]
version = "0.1.3"

[dev-dependencies]
#ctrlc = "3.1.1"
lazy_static = "1.0.1"
rand = "0.4.3"
tempdir = "0.3.5"

[replace]
"winapi:0.3.6" = { git = "https://github.com/froydnj/winapi-rs", branch = "aarch64" }
