[package]
name = "bits"
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MIT/Apache-2.0"

[features]
status_serde = ["serde", "serde_derive"]

[dependencies]
comedy = { path = "../comedy" }
filetime_win = { path = "../filetime_win" }
guid_win = { path = "../guid_win" }
serde = { version = "1.0.80", optional = true }
serde_derive = { version = "1.0.80", optional = true }

[dependencies.winapi]
version = "0.3.6"
features = ["basetsd",
            "bits",
            "bits2_5",
            "bitsmsg",
            "guiddef",
            "minwindef",
            "ntdef",
            "rpcndr",
            "unknwnbase",
            "winerror",
            "winnls",
            ]
