[package]
name = "comedy"
description = "Utilities for Windows COM, error handling, handles, and strings"
keywords = ["windows", "com", "win32"]
categories = ["api-bindings", "os::windows-apis"]
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MIT/Apache-2.0"

[dependencies.failure]
version = "0.1.3"
features = ["derive"]
default_features = false

[dependencies.failure_derive]
version = "0.1.3"

[dependencies.winapi]
version = "0.3.6"
features = ["basetsd",
            "combaseapi",
            "errhandlingapi",
            "handleapi",
            "impl-default",
            "minwindef",
            "objbase",
            "unknwnbase",
            "winbase",
            "winerror",
            "wtypes",
            "wtypesbase",
            ]
