[package]
name = "guid_win"
description = "Windows GUID/CLSID string and binary serialization"
keywords = ["windows", "com", "win32"]
categories = ["api-bindings", "os::windows-apis"]
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MIT/Apache-2.0"

[features]
guid_serde = ["serde", "serde_derive"]

[dependencies]
comedy = { path = "../comedy" }
winapi = { version = "0.3.6", features = ["combaseapi", "guiddef"] }

serde = { version = "1.0.80", optional = true }
serde_derive = { version = "1.0.80", optional = true }
